--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "rollup -w -c --bundleConfigAsCjs",
-    "build": "rollup -c --bundleConfigAsCjs"
+    "dev": "rollup -w -c --bundleConfigAsCjs --environment NODE_ENV:development",
+    "build": "rollup -c --bundleConfigAsCjs --environment NODE_ENV:production"
   },
   "keywords": [],
   "author": "",
